--- a/src/widgets/header/ui/styles.module.css
+++ b/src/widgets/header/ui/styles.module.css
@@ -1,15 +1,34 @@
 .header {
-  .header__nav {
-    .header__links {
-      .header__links-item {
+  padding-top: 24px;
+  .header__flex {
+    display: flex;
+    justify-content: space-between;
+    .header__nav {
+      .header__links {
+        display: flex;
+        align-items: center;
+        gap: 20px;
+        .header__link-item {
+          font-size: 16px;
+          line-height: 140%;
+          font-weight: 500;
+          color: var(--black-text);
+        }
       }
     }
-  }
-
-  .header__access {
-    .header__access-link {
-    }
-    .header__access-button {
+    .header__access {
+      display: flex;
+      align-items: center;
+      gap: 26px;
+      .header__access-link {
+        font-weight: 600;
+        font-size: 16px;
+        line-height: 110%;
+        color: var(--main-purple);
+      }
+      .header__access-button {
+        width: 170px;
+      }
     }
   }
 }
