--- a/src/shared/ui/index.css
+++ b/src/shared/ui/index.css
@@ -1,3 +1,5 @@
+@import url(./variables.css);
+
 :root {
   --main-purple: #6a0bff;
   --main-purple-hover: #5509cc;
@@ -9,6 +11,8 @@
   --button-disabled: #d1d1d1;
   --black-text: #191919;
   --background-color-main: #f8f8f8;
+  --yellow-main: #fffcf2;
+  --yellow-700: #ffda85;
 }
 
 * {
