--- a/src/widgets/header/ui/styles.module.css
+++ b/src/widgets/header/ui/styles.module.css
@@ -10,6 +10,7 @@
         align-items: center;
         gap: 20px;
         .header__link-item {
+          cursor: pointer;
           font-size: 16px;
           line-height: 140%;
           font-weight: 500;
