--- a/src/widgets/top-questions/ui/styles.module.css
+++ b/src/widgets/top-questions/ui/styles.module.css
@@ -8,7 +8,7 @@
       .top-questions__light-button {
         margin-top: 37px;
         cursor: pointer;
-        background-color: var(--light-purple);
+        background-color: var(--light-700);
         color: var(--main-purple);
         font-size: 16px;
         font-weight: 500;
@@ -88,7 +88,7 @@
 
       &:nth-child(2) {
         margin-top: 40px;
-        background-color: var(--light-purple);
+        background-color: var(--purple-100);
 
         .top-questions__card-icon-wrap {
           background-color: var(--purple-icon-background);
@@ -96,10 +96,7 @@
       }
 
       .top-questions__card-icon-wrap {
-        padding: 9.5px 8.5px;
         background-color: #ececec;
-        border-radius: 8px;
-        display: inline-block;
         max-height: 45px;
 
         .top-questions__card-icon {
