--- a/src/shared/ui/index.css
+++ b/src/shared/ui/index.css
@@ -7,7 +7,7 @@
   --purple-100: #f0e7ff;
   --light-purple-hover: #e1ceff;
   --light-purple-active: #c39dff;
-  --purple-icon-background: #a66dff;
+  --purple-500: #a66dff;
   --button-disabled: #d1d1d1;
   --black-text: #191919;
   --background-color-main: #f8f8f8;
