--- a/src/shared/ui/variables.css
+++ b/src/shared/ui/variables.css
@@ -12,6 +12,12 @@ h2 {
   text-transform: uppercase;
 }
 
+.body1 {
+  font-size: 12px;
+  line-height: 120%;
+  font-weight: 400;
+}
+
 .body3 {
   font-size: 16px;
   line-height: 130%;
