--- a/src/widgets/header/ui/styles.module.css
+++ b/src/widgets/header/ui/styles.module.css
@@ -1,8 +1,13 @@
 .header {
   padding-top: 24px;
+  @media (max-width: 1260px) {
+    background-color: #fff;
+    padding-top: 0;
+  }
   .header__flex {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     padding: 8px 0;
     .header__nav {
       .header__links {
@@ -15,6 +20,58 @@
           line-height: 140%;
           font-weight: 500;
           color: var(--black-text);
+
+          @media (max-width: 1260px) {
+            &:nth-child(2) {
+              display: none;
+            }
+            &:nth-child(3) {
+              display: none;
+            }
+          }
+        }
+      }
+      .dropdown {
+        display: none;
+        position: relative;
+        flex-direction: column;
+        align-items: center;
+        cursor: pointer;
+        @media (max-width: 1260px) {
+          display: flex;
+        }
+        .dropdown__btn-wrap {
+          display: flex;
+          align-items: center;
+          gap: 6px;
+          .dropdown__btn {
+            cursor: pointer;
+            font-size: 16px;
+            font-weight: 500;
+            line-height: 140%;
+            border: none;
+            background-color: transparent;
+          }
+        }
+        .dropdown__inner {
+          background-color: #fff;
+          border-radius: 5px;
+          padding: 6px;
+          min-width: 204px;
+          top: 30px;
+          left: 0px;
+          position: absolute;
+          box-shadow: 0px 4px 10px rgba(106, 99, 118, 0.2);
+          .dropdown__link {
+            display: block;
+            padding: 6px 10px;
+            color: var(--black-text);
+            &:hover {
+              color: var(--purple-800);
+              background-color: var(--background-color-main);
+              border-radius: 12px;
+            }
+          }
         }
       }
     }
@@ -22,14 +79,9 @@
       display: flex;
       align-items: center;
       gap: 26px;
-      .header__access-link {
-        font-weight: 600;
-        font-size: 16px;
-        line-height: 110%;
-        color: var(--main-purple);
-      }
-      .header__access-button {
-        width: 170px;
+
+      @media (max-width: 1260px) {
+        display: none;
       }
     }
   }
