--- a/src/shared/ui/index.css
+++ b/src/shared/ui/index.css
@@ -5,6 +5,7 @@
   --purple-800: #5509cc;
   --main-purple-active: #400799;
   --purple-100: #f0e7ff;
+  --purple-300: #d2b6ff;
   --dark-purple: #18003e;
   --light-purple-hover: #e1ceff;
   --light-purple-active: #c39dff;
