--- a/src/shared/ui/variables.css
+++ b/src/shared/ui/variables.css
@@ -3,6 +3,10 @@ h1 {
   font-size: 60px;
   line-height: 115%;
   text-transform: uppercase;
+
+  @media (max-width: 1260px) {
+    font-size: 40px;
+  }
 }
 
 h2 {
@@ -22,10 +26,24 @@ h2 {
   font-size: 16px;
   line-height: 130%;
   font-weight: 400;
+
+  @media (max-width: 1260px) {
+    font-size: 14px;
+  }
+}
+
+.body2 {
+  font-size: 14px;
+  line-height: 120%;
+  font-weight: 400;
 }
 
 .body5-med {
   font-weight: 500;
   font-size: 20px;
   line-height: 120%;
+
+  @media (max-width: 1260px) {
+    font-size: 18px;
+  }
 }
