--- a/src/widgets/simulator-promo/ui/styles.module.css
+++ b/src/widgets/simulator-promo/ui/styles.module.css
@@ -1,15 +1,23 @@
 .simulator-promo {
   padding: 130px 0;
+  @media (max-width: 1260px) {
+    padding: 80px 0 94px 0;
+  }
 
-  .simulator-promo__flex-container {
-    display: flex;
-    gap: 20px;
+  .simulator-promo__grid-container {
+    display: grid;
+    grid-template-columns: 598px 1fr;
+    grid-template-rows: auto auto;
+    column-gap: 20px;
     background-color: #fff;
     border-radius: 24px;
     padding: 40px 0;
+    @media (max-width: 1260px) {
+    }
 
     .simulator-promo__questions-list-wrap {
-      max-width: 598px;
+      grid-row: 1/3;
+      width: 598px;
       background-color: var(--yellow-main);
       padding: 25px 24px 0 24px;
       border-radius: 24px;
@@ -25,23 +33,22 @@
           box-shadow: 0px 4px 10px rgba(106, 99, 118, 0.2);
           border-radius: 10px;
 
-          .simulator-promo__wrap {
+          .simulator-promo__img {
             width: 367px;
           }
         }
       }
     }
-
-    .simulator-promo__convenient-simulator {
-      padding: 33.5px 40px 0 0;
-
+    .simulator-promo__title-wrap {
+      padding-top: 33.5px;
       .simulator-promo__subtitle {
         margin-top: 16px;
       }
-
+    }
+    .simulator-promo__card-wrap {
+      align-self: start;
       .simulator-promo__start-learning {
         display: flex;
-        margin-top: 60px;
 
         .simulator-promo__icon-wrap {
           background-color: var(--yellow-700);
@@ -60,11 +67,11 @@
           padding-left: 20px;
         }
       }
+    }
 
-      .simulator-promo__button {
-        margin-top: 40px;
-        width: 240px;
-      }
+    .simulator-promo__button {
+      margin-top: 40px;
+      width: 240px;
     }
   }
 }
