--- a/src/widgets/simulator-promo/ui/styles.module.css
+++ b/src/widgets/simulator-promo/ui/styles.module.css
@@ -6,13 +6,16 @@
 
   .simulator-promo__grid-container {
     display: grid;
-    grid-template-columns: 598px 1fr;
+    grid-template-columns: auto auto;
     grid-template-rows: auto auto;
     column-gap: 20px;
     background-color: #fff;
     border-radius: 24px;
     padding: 40px 0;
+
     @media (max-width: 1260px) {
+      grid-template-rows: auto auto auto;
+      grid-template-columns: auto;
     }
 
     .simulator-promo__questions-list-wrap {
@@ -21,6 +24,12 @@
       background-color: var(--yellow-main);
       padding: 25px 24px 0 24px;
       border-radius: 24px;
+
+      @media (max-width: 1260px) {
+        grid-row: 2/3;
+        justify-self: center;
+        margin-top: 24px;
+      }
 
       .simulator-promo__questions-list {
         background-color: #fff;
@@ -41,14 +50,28 @@
     }
     .simulator-promo__title-wrap {
       padding-top: 33.5px;
+      @media (max-width: 1260px) {
+        grid-row: 1/2;
+        justify-self: center;
+        padding-top: 0;
+      }
       .simulator-promo__subtitle {
         margin-top: 16px;
       }
     }
     .simulator-promo__card-wrap {
+      padding-right: 40px;
       align-self: start;
+
+      @media (max-width: 1260px) {
+        justify-self: center;
+      }
       .simulator-promo__start-learning {
         display: flex;
+
+        @media (max-width: 1260px) {
+          margin-top: 24px;
+        }
 
         .simulator-promo__icon-wrap {
           background-color: var(--yellow-700);
@@ -61,6 +84,10 @@
         .simulator-promo__graph-up {
           border-right: 1px solid var(--black-200);
           padding-right: 20px;
+
+          @media (max-width: 1260px) {
+            border: none;
+          }
         }
 
         .simulator-promo__structure {
@@ -72,6 +99,11 @@
     .simulator-promo__button {
       margin-top: 40px;
       width: 240px;
+      @media (max-width: 1260px) {
+        display: block;
+        margin: 0 auto;
+        margin-top: 30px;
+      }
     }
   }
 }
