--- a/src/widgets/prepare/ui/styles.module.css
+++ b/src/widgets/prepare/ui/styles.module.css
@@ -1,48 +1,101 @@
 .prepare {
   background-color: var(--purple-100);
+  border-radius: 24px;
   padding: 40px 0;
-  .prepare__flex {
+  .prepare__top {
+    display: flex;
+    justify-content: space-between;
+
+    @media (max-width: 1260px) {
+      flex-direction: column;
+    }
+
+    .prepare__title {
+      flex: 1 1 82%;
+
+      @media (max-width: 1260px) {
+        text-align: center;
+      }
+    }
+
+    .prepare__text {
+      margin-top: 50px;
+
+      @media (max-width: 1260px) {
+        margin: 0 auto;
+        margin-top: 16px;
+        text-align: center;
+        max-width: 405px;
+      }
+    }
+  }
+
+  .prepare__bottom {
     display: flex;
     gap: 20px;
-    .prepare__left {
-      .prepare__inner {
-        margin-top: 24px;
-        padding: 24px 24px 18px 24px;
-        background-color: #fff;
-        border-radius: 16px;
+    align-items: flex-start;
 
-        .prepare__promo {
-          display: flex;
-          gap: 36px;
-          .prepare__icon-wrap {
-            background-color: var(--black-50);
-          }
+    @media (max-width: 1260px) {
+      flex-direction: column;
+      align-items: center;
+    }
+    .prepare__inner {
+      margin-top: 24px;
+      padding: 24px 24px 18px 24px;
+      background-color: #fff;
+      border-radius: 16px;
+      @media (max-width: 1260px) {
+        flex-direction: column;
+        max-width: 628px;
+      }
+
+      .prepare__promo {
+        display: flex;
+        gap: 36px;
+        .prepare__icon-wrap {
+          background-color: var(--black-50);
         }
       }
       .prepare__img {
         max-width: 653px;
         margin-top: 24px;
+        @media (max-width: 1260px) {
+          max-width: 580px;
+        }
       }
     }
-
-    .prepare__right {
-      padding-top: 50px;
-      .prepare__filters-wrap {
-        margin-top: 24px;
-        padding: 24px 24px 18px 24px;
-        border-radius: 16px;
-        background-color: var(--yellow-main);
-        .prepare__filters-screen {
-          max-width: 447px;
+    .prepare__filters-wrap {
+      margin-top: 24px;
+      padding: 24px 24px 18px 24px;
+      border-radius: 16px;
+      background-color: var(--yellow-main);
+      @media (max-width: 1260px) {
+        margin-top: 0;
+        max-width: 628px;
+      }
+      .prepare__filters-screen {
+        max-width: 447px;
+        @media (max-width: 1260px) {
+          max-width: 579px;
         }
-        .prepare__filters-flex {
-          display: flex;
-          gap: 24px;
-          .prepare__filter-icon-wrap {
-            min-width: 43px;
-            background-color: var(--yellow-700);
-          }
+      }
+      .prepare__filters-flex {
+        display: flex;
+        gap: 24px;
+        max-width: 400px;
+        @media (max-width: 1260px) {
+          max-width: 371px;
         }
+        .prepare__filter-icon-wrap {
+          min-width: 43px;
+          background-color: var(--yellow-700);
+        }
+      }
+    }
+    .prepare__button {
+      display: none;
+      @media (max-width: 1260px) {
+        display: block;
       }
     }
   }
