--- a/src/widgets/mode/ui/styles.module.css
+++ b/src/widgets/mode/ui/styles.module.css
@@ -3,24 +3,72 @@
 
   .mode__title {
     text-align: center;
+
+    @media (max-width: 1260px) {
+      max-width: 526px;
+      margin: 0 auto;
+    }
   }
 
   .mode__flex {
+    position: relative;
     display: flex;
     gap: 123px;
     margin-top: 45px;
 
+    @media (max-width: 1260px) {
+      flex-direction: column;
+      gap: 84px;
+    }
+
     .mode__left {
+      position: relative;
       .mode__screenshot {
         width: 701px;
+      }
+      @media (max-width: 1260px) {
+        &::before {
+          content: "";
+          position: absolute;
+          width: 2px;
+          height: 90px;
+          background-color: var(--black-200);
+          bottom: -85px;
+          left: 25%;
+        }
+        &::after {
+          content: "";
+          position: absolute;
+          width: 2px;
+          height: 126px;
+          background-color: var(--black-200);
+          bottom: -124px;
+          right: 25%;
+        }
       }
     }
 
     .mode__right {
+      @media (max-width: 1260px) {
+        display: flex;
+        flex-wrap: wrap;
+        column-gap: 20px;
+      }
       .card {
         position: relative;
         padding: 24px;
         border-radius: 12px;
+
+        @media (max-width: 1260px) {
+          padding: 16px;
+          width: 344px;
+          align-self: start;
+          flex-shrink: 0;
+
+          &:nth-child(2) {
+            margin-top: 40px;
+          }
+        }
 
         &::before {
           content: "";
@@ -31,6 +79,17 @@
           top: 70px;
           left: -117px;
           background: url(../assets/line.png) no-repeat center / cover;
+
+          @media (max-width: 1260px) {
+            display: none;
+            /* background: none;
+            background-color: var(--black-200);
+            width: 2px;
+            height: 116px;
+            top: -95px;
+            left: 50%;
+            z-index: -1; */
+          }
         }
 
         .card__icon-top {
@@ -50,6 +109,16 @@
         background-color: var(--purple-100);
       }
 
+      /* .mode__line {
+        position: absolute;
+        top: -20px;
+        left: 50%;
+        height: 116px;
+        width: 2px;
+        z-index: -1;
+        background-color: var(--black-200);
+      } */
+
       .bottom {
         background-color: var(--yellow-main);
         margin-top: 26px;
@@ -57,6 +126,12 @@
 
       .mode__text {
         margin-top: 21px;
+        @media (max-width: 1260px) {
+          position: absolute;
+          bottom: 5px;
+          max-width: 344px;
+          flex-shrink: 0;
+        }
       }
     }
   }
