--- a/src/widgets/prepare/ui/styles.module.css
+++ b/src/widgets/prepare/ui/styles.module.css
@@ -2,6 +2,10 @@
   background-color: var(--purple-100);
   border-radius: 24px;
   padding: 40px 0;
+
+  @media (max-width: 1260px) {
+    margin: 0 30px;
+  }
   .prepare__top {
     display: flex;
     justify-content: space-between;
