adapt track and footer section for 1260px

--- a/src/widgets/footer/ui/styles.module.css
+++ b/src/widgets/footer/ui/styles.module.css
@@ -3,6 +3,10 @@
   background-color: var(--dark-purple);
   border-radius: 20px 20px 0 0;
 
+  @media (max-width: 1260px) {
+    padding: 40px 0px 15px 0;
+  }
+
   .footer__logo {
     max-width: 99px;
   }
@@ -21,6 +25,9 @@
   .footer__text {
     margin-top: 64px;
     color: var(--black-400);
+    @media (max-width: 1260px) {
+      margin-top: 50px;
+    }
   }
 
   .footer__line {
@@ -28,6 +35,9 @@
     width: 100%;
     background-color: #e6e6e61a;
     margin-top: 35px;
+    @media (max-width: 1260px) {
+      margin-top: 20px;
+    }
   }
 
   .footer__bottom {
@@ -35,6 +45,10 @@
     justify-content: space-between;
     margin-top: 19px;
     color: var(--black-400);
+
+    @media (max-width: 1260px) {
+      margin-top: 17px;
+    }
 
     .footer__bottom-text {
       margin-right: 20px;
