--- a/src/widgets/track/ui/styles.module.css
+++ b/src/widgets/track/ui/styles.module.css
@@ -1,45 +1,92 @@
 .track {
   padding-bottom: 130px;
-  .track__flex {
-    display: flex;
-    justify-content: space-between;
+  .track__grid {
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-template-rows: auto auto;
+    column-gap: 20px;
     border-radius: 24px;
     padding: 40px 0 40px 40px;
     background-color: #fff;
 
-    .track__left {
+    @media (max-width: 1260px) {
+      padding: 40px;
+      grid-template-columns: auto;
+      grid-template-rows: auto auto auto;
+    }
+
+    .track__title {
       margin-top: 26px;
+
+      @media (max-width: 1260px) {
+        justify-self: center;
+        margin-top: 0;
+        grid-row: 1/2;
+        grid-column: 1/2;
+
+        h2 {
+          text-align: center;
+        }
+      }
       .track__subtitle {
         margin-top: 16px;
+
+        @media (max-width: 1260px) {
+          margin: 0 auto;
+          margin-top: 16px;
+          text-align: center;
+          max-width: 455px;
+        }
+      }
+    }
+
+    .track__inner-flex {
+      display: flex;
+      margin-top: 124px;
+      padding-bottom: 26px;
+
+      @media (max-width: 1260px) {
+        margin-top: 24px;
+        justify-self: center;
+        grid-row: 3/4;
+        grid-column: 1/2;
       }
 
-      .track__inner-flex {
-        display: flex;
-        margin-top: 124px;
+      .track__inner-wrap {
+        &:first-child {
+          border-right: 1px solid var(--black-200);
+          padding-right: 20px;
+        }
 
-        .track__inner-wrap {
-          &:first-child {
-            border-right: 1px solid var(--black-200);
-            padding-right: 20px;
-          }
+        &:nth-child(2) {
+          padding-left: 20px;
+        }
+        .track__icon-wrap {
+          background-color: var(--purple-500);
+        }
 
-          &:nth-child(2) {
-            padding-left: 20px;
-          }
-          .track__icon-wrap {
-            background-color: var(--purple-500);
-          }
-
-          .track__text {
-            margin-top: 16px;
-          }
+        .track__text {
+          margin-top: 16px;
         }
       }
     }
 
     .track__right {
+      grid-column: 2/3;
+      grid-row: 1/3;
+
+      @media (max-width: 1260px) {
+        justify-self: center;
+        margin-top: 24px;
+        grid-row: 2/3;
+        grid-column: 1/2;
+      }
       .track__img {
         max-width: 562px;
+
+        @media (max-width: 1260px) {
+          border-radius: 16px;
+        }
       }
     }
   }
