--- a/src/widgets/track/ui/styles.module.css
+++ b/src/widgets/track/ui/styles.module.css
@@ -56,6 +56,10 @@
         &:first-child {
           border-right: 1px solid var(--black-200);
           padding-right: 20px;
+
+          @media (max-width: 1260px) {
+            border: none;
+          }
         }
 
         &:nth-child(2) {
@@ -86,6 +90,7 @@
 
         @media (max-width: 1260px) {
           border-radius: 16px;
+          max-width: 630px;
         }
       }
     }
