adapt top questions for 1260px

--- a/src/shared/ui/variables.css
+++ b/src/shared/ui/variables.css
@@ -7,6 +7,10 @@ h1 {
   @media (max-width: 1260px) {
     font-size: 40px;
   }
+
+  @media (max-width: 730px) {
+    font-size: 20px;
+  }
 }
 
 h2 {
@@ -26,15 +30,15 @@ h2 {
   font-weight: 400;
 }
 
-.body3 {
-  font-size: 16px;
-  line-height: 130%;
-  font-weight: 400;
-}
-
 .body2 {
   font-size: 14px;
   line-height: 120%;
+  font-weight: 400;
+}
+
+.body3 {
+  font-size: 16px;
+  line-height: 130%;
   font-weight: 400;
 }
 
