--- a/src/widgets/top-questions/ui/styles.module.css
+++ b/src/widgets/top-questions/ui/styles.module.css
@@ -3,12 +3,19 @@
   @media (max-width: 1260px) {
     padding-top: 85px;
   }
+  @media (max-width: 1260px) {
+    padding-top: 18px;
+  }
   .top-questions__flex {
     display: flex;
     gap: 40px;
 
     @media (max-width: 1260px) {
       flex-direction: column;
+    }
+
+    @media (max-width: 730px) {
+      gap: 24px;
     }
 
     .top-questions__left {
@@ -55,15 +62,21 @@
           text-align: center;
           margin-top: 8px;
         }
+        @media (max-width: 730px) {
+          font-size: 14px;
+        }
       }
-
       .top-questions__button {
-        width: 240px;
         margin-top: 24px;
+        width: 240px;
         @media (max-width: 1260px) {
           display: block;
           margin: 0 auto;
           margin-top: 20px;
+        }
+
+        @media (max-width: 730px) {
+          width: 204px;
         }
       }
     }
@@ -92,12 +105,19 @@
         @media (max-width: 1260px) {
           right: 50px;
         }
+
+        @media (max-width: 730px) {
+          display: none;
+        }
       }
 
       .top-questions__user {
         max-width: 498px;
         @media (max-width: 1260px) {
           max-width: 566px;
+        }
+        @media (max-width: 730px) {
+          max-width: 328px;
         }
       }
 
@@ -109,6 +129,10 @@
         @media (max-width: 1260px) {
           left: 0;
         }
+
+        @media (max-width: 730px) {
+          max-width: 84px;
+        }
       }
 
       .top-questions__progress {
@@ -119,6 +143,11 @@
         @media (max-width: 1260px) {
           right: 0;
         }
+
+        @media (max-width: 730px) {
+          max-width: 164px;
+          top: 240px;
+        }
       }
     }
   }
@@ -126,6 +155,11 @@
     display: flex;
     gap: 20px;
     margin-top: 40px;
+
+    @media (max-width: 730px) {
+      flex-direction: column;
+      align-items: center;
+    }
 
     .top-questions__card-wrap {
       padding: 24px;
@@ -137,11 +171,18 @@
         padding: 18px;
         max-width: 222px;
       }
+      @media (max-width: 730px) {
+        max-width: 328px;
+      }
 
       &:nth-child(2) {
         position: relative;
         margin-top: 40px;
         background-color: var(--purple-100);
+
+        @media (max-width: 730px) {
+          margin-top: 0;
+        }
 
         @media (max-width: 1260px) {
           &::before {
@@ -152,6 +193,10 @@
             height: 80px;
             width: 2px;
             background-color: var(--purple-300);
+
+            @media (max-width: 730px) {
+              display: none;
+            }
           }
         }
 
@@ -174,6 +219,9 @@
         text-transform: uppercase;
         @media (max-width: 1260px) {
           margin-top: 24px;
+        }
+        @media (max-width: 1260px) {
+          font-size: 16px;
         }
       }
 
