adapt simulator-promo for 730px

--- a/src/shared/ui/variables.css
+++ b/src/shared/ui/variables.css
@@ -22,6 +22,10 @@ h2 {
   @media (max-width: 1260px) {
     font-size: 34px;
   }
+
+  @media (max-width: 730px) {
+    font-size: 20px;
+  }
 }
 
 .body1 {
