--- a/src/widgets/prepare/ui/styles.module.css
+++ b/src/widgets/prepare/ui/styles.module.css
@@ -6,6 +6,10 @@
   @media (max-width: 1260px) {
     margin: 0 30px;
   }
+
+  @media (max-width: 730px) {
+    padding: 24px 16px 42px 16px;
+  }
   .prepare__top {
     display: flex;
     justify-content: space-between;
@@ -31,6 +35,10 @@
         text-align: center;
         max-width: 405px;
       }
+
+      @media (max-width: 730px) {
+        margin-top: 14px;
+      }
     }
   }
 
@@ -43,6 +51,10 @@
       flex-direction: column;
       align-items: center;
     }
+
+    @media (max-width: 730px) {
+      gap: 24px;
+    }
     .prepare__inner {
       margin-top: 24px;
       padding: 24px 24px 18px 24px;
@@ -53,11 +65,27 @@
         max-width: 628px;
       }
 
+      @media (max-width: 730px) {
+        max-width: 328px;
+        padding: 16px;
+      }
+
       .prepare__promo {
         display: flex;
         gap: 36px;
+
+        @media (max-width: 730px) {
+          gap: 16px;
+        }
         .prepare__icon-wrap {
           background-color: var(--black-50);
+          flex-shrink: 0;
+        }
+
+        @media (max-width: 730px) {
+          p {
+            font-size: 14px;
+          }
         }
       }
       .prepare__img {
@@ -65,6 +93,9 @@
         margin-top: 24px;
         @media (max-width: 1260px) {
           max-width: 580px;
+        }
+        @media (max-width: 730px) {
+          max-width: 296px;
         }
       }
     }
@@ -77,10 +108,16 @@
         margin-top: 0;
         max-width: 628px;
       }
+      @media (max-width: 730px) {
+        max-width: 328px;
+      }
       .prepare__filters-screen {
         max-width: 447px;
         @media (max-width: 1260px) {
           max-width: 579px;
+        }
+        @media (max-width: 730px) {
+          max-width: 296px;
         }
       }
       .prepare__filters-flex {
@@ -90,6 +127,12 @@
         @media (max-width: 1260px) {
           max-width: 371px;
         }
+        @media (max-width: 730px) {
+          gap: 16px;
+          p {
+            font-size: 14px;
+          }
+        }
         .prepare__filter-icon-wrap {
           min-width: 43px;
           background-color: var(--yellow-700);
@@ -98,8 +141,14 @@
     }
     .prepare__button {
       display: none;
+      margin-top: 26px;
+      width: 256px;
       @media (max-width: 1260px) {
         display: block;
+      }
+      @media (max-width: 730px) {
+        margin-top: 0;
+        width: 240px;
       }
     }
   }
