--- a/src/widgets/track/ui/styles.module.css
+++ b/src/widgets/track/ui/styles.module.css
@@ -1,5 +1,9 @@
 .track {
   padding-bottom: 130px;
+  @media (max-width: 730px) {
+    padding-bottom: 40px;
+  }
+
   .track__grid {
     display: grid;
     grid-template-columns: auto auto;
@@ -15,6 +19,10 @@
       grid-template-rows: auto auto auto;
     }
 
+    @media (max-width: 730px) {
+      padding: 24px 16px;
+    }
+
     .track__title {
       margin-top: 26px;
 
@@ -28,6 +36,13 @@
           text-align: center;
         }
       }
+
+      @media (max-width: 730px) {
+        h2 {
+          max-width: 325px;
+        }
+      }
+
       .track__subtitle {
         margin-top: 16px;
 
@@ -36,6 +51,11 @@
           margin-top: 16px;
           text-align: center;
           max-width: 455px;
+        }
+
+        @media (max-width: 730px) {
+          font-size: 14px;
+          max-width: 330px;
         }
       }
     }
@@ -52,6 +72,11 @@
         grid-column: 1/2;
       }
 
+      @media (max-width: 730px) {
+        flex-direction: column;
+        padding-bottom: 0;
+      }
+
       .track__inner-wrap {
         &:first-child {
           border-right: 1px solid var(--black-200);
@@ -60,10 +85,19 @@
           @media (max-width: 1260px) {
             border: none;
           }
+
+          @media (max-width: 730px) {
+            padding-right: 0;
+          }
         }
 
         &:nth-child(2) {
           padding-left: 20px;
+
+          @media (max-width: 730px) {
+            padding-left: 0;
+            margin-top: 16px;
+          }
         }
         .track__icon-wrap {
           background-color: var(--purple-500);
@@ -71,6 +105,10 @@
 
         .track__text {
           margin-top: 16px;
+
+          @media (max-width: 730px) {
+            font-size: 14px;
+          }
         }
       }
     }
@@ -85,12 +123,21 @@
         grid-row: 2/3;
         grid-column: 1/2;
       }
+
+      @media (max-width: 730px) {
+        margin-top: 16px;
+      }
+
       .track__img {
         max-width: 562px;
 
         @media (max-width: 1260px) {
           border-radius: 16px;
           max-width: 630px;
+        }
+
+        @media (max-width: 730px) {
+          max-width: 328px;
         }
       }
     }
