--- a/src/widgets/footer/ui/styles.module.css
+++ b/src/widgets/footer/ui/styles.module.css
@@ -7,6 +7,10 @@
     padding: 40px 0px 15px 0;
   }
 
+  @media (max-width: 730px) {
+    padding: 16px 0 18px 0;
+  }
+
   .footer__logo {
     max-width: 99px;
   }
@@ -20,6 +24,9 @@
     display: flex;
     gap: 20px;
     margin-top: 20px;
+    @media (max-width: 730px) {
+      margin-top: 16px;
+    }
   }
 
   .footer__text {
@@ -27,6 +34,9 @@
     color: var(--black-400);
     @media (max-width: 1260px) {
       margin-top: 50px;
+    }
+    @media (max-width: 730px) {
+      margin-top: 16px;
     }
   }
 
@@ -37,6 +47,9 @@
     margin-top: 35px;
     @media (max-width: 1260px) {
       margin-top: 20px;
+    }
+    @media (max-width: 730px) {
+      margin-top: 16px;
     }
   }
 
