--- a/src/shared/ui/index.css
+++ b/src/shared/ui/index.css
@@ -1,7 +1,7 @@
 @import url(./variables.css);
 
 :root {
-  --main-purple: #6a0bff;
+  --purple-700: #6a0bff;
   --purple-800: #5509cc;
   --main-purple-active: #400799;
   --purple-100: #f0e7ff;
