--- a/src/widgets/top-questions/ui/styles.module.css
+++ b/src/widgets/top-questions/ui/styles.module.css
@@ -28,7 +28,7 @@
         margin-top: 37px;
         cursor: pointer;
         background-color: var(--light-700);
-        color: var(--main-purple);
+        color: var(--purple-700);
         font-size: 16px;
         font-weight: 500;
         line-height: 120%;
