--- a/src/widgets/quiz-section/ui/quiz-section/quiz-section.css
+++ b/src/widgets/quiz-section/ui/quiz-section/quiz-section.css
@@ -7,12 +7,10 @@
     border-radius: 24px;
     box-shadow: 0px 4px 10px rgba(106, 99, 118, 0.2);
 
-    p {
-      color: var(--black-700);
-    }
-
-    .quiz__inner-wrap {
+    .quiz__flex {
+      display: flex;
       margin-top: 24px;
+      gap: 138px;
     }
   }
 }
