--- a/src/shared/ui/index.css
+++ b/src/shared/ui/index.css
@@ -3,6 +3,7 @@
 :root {
   --purple-700: #6a0bff;
   --purple-800: #5509cc;
+  --brand: #5533ff;
   --main-purple-active: #400799;
   --purple-100: #f0e7ff;
   --purple-300: #d2b6ff;
