--- a/src/shared/ui/index.css
+++ b/src/shared/ui/index.css
@@ -16,7 +16,9 @@
   --background-color-main: #f8f8f8;
   --yellow-main: #fffcf2;
   --yellow-700: #ffda85;
+  --black-10: #f8f8f8;
   --black-50: #e8e8e8;
+  --black-100: #d1d1d1;
   --black-200: #bababa;
   --black-400: #8c8c8c;
   --black-600: #5e5e5e;
