--- a/src/widgets/footer/ui/styles.module.css
+++ b/src/widgets/footer/ui/styles.module.css
@@ -1,6 +1,6 @@
 .footer {
   padding: 64px 0 17px 0;
-  background-color: var(--dark-purple);
+  background-color: var(--purple-1000);
   border-radius: 20px 20px 0 0;
 
   @media (max-width: 1260px) {
