--- a/src/widgets/promo/ui/unites/unites.css
+++ b/src/widgets/promo/ui/unites/unites.css
@@ -2,7 +2,7 @@
   background-color: #fff;
   border-radius: 24px;
   padding: 24px;
-  box-shadow: 0px 4px 10px rgba(106, 99, 118, 0.2);
+  box-shadow: var(--box-shadow);
 
   .unites__desr {
     color: var(--black-600);
