--- a/src/entities/questions/ui/questions/questions.css
+++ b/src/entities/questions/ui/questions/questions.css
@@ -5,7 +5,7 @@
     padding: 24px;
     background-color: #fff;
     border-radius: 24px;
-    box-shadow: 0px 4px 10px rgba(106, 99, 118, 0.2);
+    box-shadow: var(--box-shadow);
 
     .questions__nav {
       display: flex;
