--- a/src/shared/ui/variables.css
+++ b/src/shared/ui/variables.css
@@ -40,6 +40,12 @@ h2 {
   font-weight: 400;
 }
 
+.body3-accent {
+  font-size: 16px;
+  line-height: 120%;
+  font-weight: 500;
+}
+
 .body3 {
   font-size: 16px;
   line-height: 130%;
