--- a/src/widgets/header/ui/styles.module.css
+++ b/src/widgets/header/ui/styles.module.css
@@ -79,7 +79,7 @@
           top: 30px;
           left: 0px;
           position: absolute;
-          box-shadow: 0px 4px 10px rgba(106, 99, 118, 0.2);
+          box-shadow: var(--box-shadow);
           .dropdown__link {
             display: block;
             padding: 6px 10px;
