--- a/src/widgets/progress-bar/progress-bar.css
+++ b/src/widgets/progress-bar/progress-bar.css
@@ -2,7 +2,7 @@
   margin-top: 24px;
   padding: 24px;
   background-color: #fff;
-  box-shadow: 0px 4px 10px rgba(106, 99, 118, 0.2);
+  box-shadow: var(--box-shadow);
   border-radius: 12px;
 
   .progress__flex-wrap {
