--- a/src/widgets/quiz-section/ui/quiz-section/quiz-section.css
+++ b/src/widgets/quiz-section/ui/quiz-section/quiz-section.css
@@ -5,7 +5,7 @@
     background-color: #fff;
     padding: 24px;
     border-radius: 24px;
-    box-shadow: 0px 4px 10px rgba(106, 99, 118, 0.2);
+    box-shadow: var(--box-shadow);
 
     .quiz__flex {
       display: flex;
