--- a/src/widgets/simulator-promo/ui/styles.module.css
+++ b/src/widgets/simulator-promo/ui/styles.module.css
@@ -59,7 +59,7 @@
         .simulator-promo__img-wrap {
           padding: 24px;
           margin-top: 24px;
-          box-shadow: 0px 4px 10px rgba(106, 99, 118, 0.2);
+          box-shadow: var(--box-shadow);
           border-radius: 10px;
 
           @media (max-width: 730px) {
