--- a/src/widgets/learnt-questions-list/ui/learnt-card/learnt-card.css
+++ b/src/widgets/learnt-questions-list/ui/learnt-card/learnt-card.css
@@ -14,6 +14,10 @@
     justify-content: space-between;
     padding-bottom: 6px;
 
+    .card__link {
+      color: var(--black-800);
+    }
+
     .card__mark {
       flex-grow: 0;
     }
