add universal card component

--- a/src/widgets/learnt-questions-list/ui/learnt-card/learnt-card.css
+++ b/src/widgets/learnt-questions-list/ui/learnt-card/learnt-card.css
@@ -1,4 +1,4 @@
-.card {
+/* .card {
   flex: 0 0 calc(49%);
   display: flex;
   padding: 10px 0 12px 0;
@@ -22,4 +22,4 @@
       flex-grow: 0;
     }
   }
-}
+} */
