--- a/src/widgets/top-questions/ui/promo-cards/promo-cards.css
+++ b/src/widgets/top-questions/ui/promo-cards/promo-cards.css
@@ -2,24 +2,18 @@
   display: flex;
   gap: 20px;
   margin-top: 40px;
+  align-items: flex-start;
 
   @media (max-width: 730px) {
     flex-direction: column;
     align-items: center;
   }
 
-  .promo-cards__wrap {
-    padding: 24px;
+  .promo-card__wrap {
     background-color: #fff;
-    border-radius: 12px;
-    max-width: 392px;
-    max-height: 207px;
+
     @media (max-width: 1260px) {
-      padding: 18px;
-      max-width: 222px;
-    }
-    @media (max-width: 730px) {
-      max-width: 328px;
+      padding: 16px;
     }
 
     &:nth-child(2) {
@@ -47,36 +41,29 @@
         }
       }
 
-      .promo-cards__icon-wrap {
+      .promo-card__icon {
         background-color: var(--purple-500);
       }
     }
-
-    .promo-cards__icon-wrap {
+    .promo-card__icon {
       background-color: #ececec;
-      max-height: 45px;
-
-      .promo-cards__icon {
-        max-width: 26px;
-      }
     }
 
-    .promo-cards__title {
+    .promo-card__text {
       margin-top: 40px;
-      text-transform: uppercase;
+
       @media (max-width: 1260px) {
+        font-size: 18px;
         margin-top: 24px;
       }
-      @media (max-width: 1260px) {
-        font-size: 16px;
-      }
-    }
 
-    .promo-cards__description {
-      margin-top: 8px;
-      color: #474747;
-      @media (max-width: 1260px) {
-        font-size: 14px;
+      .promo-card__descr {
+        margin-top: 8px;
+        color: var(--black-700);
+
+        @media (max-width: 1260px) {
+          font-size: 14px;
+        }
       }
     }
   }
