--- a/src/widgets/learnt-questions-list/ui/learnt-card/learnt-card.css
+++ b/src/widgets/learnt-questions-list/ui/learnt-card/learnt-card.css
@@ -1,25 +1,25 @@
-/* .card {
+.learnt-card {
   flex: 0 0 calc(49%);
   display: flex;
   padding: 10px 0 12px 0;
   gap: 20px;
   border-bottom: 1px solid var(--black-50);
-  .card__img {
+  .learnt-card__img {
     min-width: 154px;
   }
 
-  .card__wrap {
+  .learnt-card__wrap {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     padding-bottom: 6px;
 
-    .card__link {
+    .learnt-card__link {
       color: var(--black-800);
     }
 
-    .card__mark {
+    .learnt-card__mark {
       flex-grow: 0;
     }
   }
-} */
+}
