--- a/src/entities/questions/ui/questions/questions.css
+++ b/src/entities/questions/ui/questions/questions.css
@@ -52,7 +52,7 @@
           &::before {
             content: "";
             display: block;
-            width: 8px;
+            min-width: 8px;
             height: 8px;
             border-radius: 100%;
             background-color: var(--brand);
