--- a/src/widgets/header/ui/header-nav/header-nav.css
+++ b/src/widgets/header/ui/header-nav/header-nav.css
@@ -8,7 +8,17 @@
       font-size: 16px;
       line-height: 140%;
       font-weight: 500;
-      color: var(--black-text);
+
+      a {
+        padding: 7px;
+
+        color: var(--black-text);
+        &:hover {
+          color: var(--purple-700);
+          background-color: var(--black-50);
+          border-radius: 12px;
+        }
+      }
 
       @media (max-width: 1260px) {
         &:nth-child(2) {
