--- a/src/widgets/breadcrumbs/ui/breadcrumbs.css
+++ b/src/widgets/breadcrumbs/ui/breadcrumbs.css
@@ -3,5 +3,12 @@
 
   .breadcrumbs__list {
     display: flex;
+    align-items: center;
+
+    .breadcrumbs__list-item {
+      display: flex;
+      align-items: center;
+      gap: 4px;
+    }
   }
 }
