--- a/src/widgets/answer-info/answer-info.css
+++ b/src/widgets/answer-info/answer-info.css
@@ -8,4 +8,57 @@
   .info__level {
     color: var(--black-700);
   }
+
+  .info__wrap {
+    display: flex;
+    gap: 16px;
+
+    .info__inner {
+      display: flex;
+      gap: 12px;
+      background-color: var(--black-10);
+      padding: 6px 10px;
+      border-radius: 8px;
+      margin-top: 8px;
+
+      span {
+        display: flex;
+        justify-content: center;
+        min-width: 23px;
+        min-height: 21px;
+        background-color: var(--purple-700);
+        padding: 2px 4px;
+        color: #fff;
+        border-radius: 4px;
+      }
+    }
+  }
+  .info__skills {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-top: 24px;
+    color: var(--black-700);
+
+    .info__frame {
+      cursor: default;
+    }
+  }
+
+  .info__keywords {
+    display: flex;
+    flex-direction: column;
+    color: var(--black-700);
+    margin-top: 24px;
+
+    .info__links-wrap {
+      display: flex;
+      flex-wrap: wrap;
+      column-gap: 14px;
+
+      .info__link {
+        flex-shrink: 0;
+      }
+    }
+  }
 }
