--- a/src/entities/questions/ui/questions/questions.css
+++ b/src/entities/questions/ui/questions/questions.css
@@ -36,6 +36,10 @@
       align-items: stretch;
       border-bottom: 1px solid var(--black-100);
 
+      @media (max-width: 1260px) {
+        flex-direction: column;
+      }
+
       .questions__inner {
         display: flex;
         flex-direction: column;
