--- a/src/shared/ui/index.css
+++ b/src/shared/ui/index.css
@@ -23,6 +23,7 @@
   --black-400: #8c8c8c;
   --black-600: #5e5e5e;
   --black-700: #474747;
+  --black-800: #303030;
   --red-25: #ffecf5;
   --red-100: #fdd8e1;
   --red-200: #fbb1c4;
