adapt quiz section

--- a/src/features/quiz-settings/quantity-selector/ui/quantity-selector.css
+++ b/src/features/quiz-settings/quantity-selector/ui/quantity-selector.css
@@ -1,5 +1,8 @@
 .quantity {
   margin-top: 24px;
+  @media (max-width: 730px) {
+    margin-top: 16px;
+  }
   .quantity__wrap {
     display: flex;
     justify-content: space-between;
