--- a/src/entities/questions/ui/questions/questions.css
+++ b/src/entities/questions/ui/questions/questions.css
@@ -7,6 +7,10 @@
     border-radius: 24px;
     box-shadow: var(--box-shadow);
 
+    @media (max-width: 730px) {
+      padding: 16px;
+    }
+
     .questions__nav {
       display: flex;
       justify-content: space-between;
@@ -27,56 +31,71 @@
     }
 
     .questions__main {
-      display: flex;
-      justify-content: space-between;
-      align-items: stretch;
-      gap: 20px;
+      display: grid;
+      grid-template-columns: auto auto;
+      column-gap: 20px;
       margin-top: 24px;
       padding-bottom: 24px;
       border-bottom: 1px solid var(--black-100);
 
       @media (max-width: 1260px) {
-        flex-direction: column;
+        grid-template-columns: auto;
+        row-gap: 20px;
+      }
+      @media (max-width: 730px) {
+        margin-top: 16px;
+        row-gap: 16px;
+        padding-bottom: 16px;
       }
 
-      .questions__inner {
+      .questions__mark {
         display: flex;
-        flex-direction: column;
-        justify-content: space-between;
+        gap: 8px;
+        align-items: end;
+      }
+      .questions__title {
+        display: flex;
+        align-items: center;
+        gap: 8px;
+        &::before {
+          content: "";
+          display: block;
+          min-width: 8px;
+          height: 8px;
+          border-radius: 100%;
+          background-color: var(--brand);
+        }
+        @media (max-width: 730px) {
+          font-size: 16px;
+        }
+      }
 
-        .questions__mark {
-          display: flex;
-          gap: 8px;
-        }
-        .questions__title {
-          display: flex;
-          align-items: center;
-          gap: 8px;
-          &::before {
-            content: "";
-            display: block;
-            min-width: 8px;
-            height: 8px;
-            border-radius: 100%;
-            background-color: var(--brand);
-          }
-        }
-
-        .questions__link {
-          display: inline-block;
-          margin-top: 16px;
-        }
+      .questions__link {
+        display: inline-block;
+        margin-top: 16px;
       }
 
       .questions__img {
-        min-height: 100px;
-        min-width: 622px;
+        width: 622px;
+        grid-row: 1/3;
+        grid-column: 2/3;
+        justify-self: end;
+        @media (max-width: 1260px) {
+          grid-row: 2/3;
+          grid-column: 1/2;
+          justify-self: center;
+          width: 100%;
+        }
       }
     }
     .questions__btn-wrap {
       padding-top: 24px;
       display: flex;
       justify-content: end;
+      @media (max-width: 730px) {
+        padding-top: 16px;
+      }
+
       .questions__complete-btn {
         cursor: pointer;
         border: none;
