--- a/src/shared/ui/image/image.css
+++ b/src/shared/ui/image/image.css
@@ -5,6 +5,10 @@
   padding-top: 80%;
   background-color: #f2f4f5;
   border-radius: 24px;
+
+  @media (max-width: 730px) {
+    border-radius: 8px;
+  }
 }
 
 .image {
