--- a/src/shared/ui/watch-more/watch-more.css
+++ b/src/shared/ui/watch-more/watch-more.css
@@ -1,14 +1,12 @@
 .watch {
-  cursor: pointer;
-  width: 100%;
-  position: absolute;
-  bottom: 0;
   display: flex;
   align-items: center;
+  cursor: pointer;
+  width: 100%;
   padding: 30px 0;
   justify-content: center;
-  background: linear-gradient(to top, white 70%, rgba(255, 255, 255, 0) 100%);
-
+  /* background: linear-gradient(to top, white 70%, rgba(255, 255, 255, 0) 100%); */
+  border-radius: 24px;
   .up {
     transform: rotate(180deg);
   }
