--- a/src/widgets/learnt-questions-list/ui/learnt-card/learnt-card.css
+++ b/src/widgets/learnt-questions-list/ui/learnt-card/learnt-card.css
@@ -1,11 +1,20 @@
 .learnt-card {
-  flex: 0 0 calc(49%);
+  flex: 0 0 49%;
   display: flex;
   padding: 10px 0 12px 0;
   gap: 20px;
   border-bottom: 1px solid var(--black-50);
+
+  @media (max-width: 1260px) {
+    flex: 0 0 100%;
+  }
   .learnt-card__img {
     min-width: 154px;
+
+    @media (max-width: 730px) {
+      min-width: 100px;
+      align-self: center;
+    }
   }
 
   .learnt-card__wrap {
