--- a/src/widgets/learnt-questions-list/ui/learnt-questions/learnt-questions.css
+++ b/src/widgets/learnt-questions-list/ui/learnt-questions/learnt-questions.css
@@ -1,6 +1,7 @@
 .learnt {
   padding-bottom: 130px;
   .learnt__wrap {
+    position: relative;
     padding: 24px;
     background-color: #fff;
     border-radius: 24px;
@@ -9,6 +10,10 @@
 
     .learnt__title {
       text-align: center;
+
+      @media (max-width: 1260px) {
+        font-size: 20px;
+      }
     }
 
     .learnt__list {
@@ -23,6 +28,10 @@
       display: flex;
       justify-content: end;
       padding-top: 24px;
+
+      @media (max-width: 1260px) {
+        display: none;
+      }
       .learnt__button {
         width: 240px;
       }
