--- a/src/widgets/promo/ui/join-us/joins-us.css
+++ b/src/widgets/promo/ui/join-us/joins-us.css
@@ -4,6 +4,10 @@
   padding: 24px;
   box-shadow: var(--box-shadow);
 
+  @media (max-width: 1260px) {
+    padding: 16px;
+  }
+
   .join-us__wrap {
     display: flex;
     align-items: center;
@@ -19,6 +23,10 @@
     display: flex;
     gap: 16px;
     margin-top: 12px;
+
+    @media (max-width: 730px) {
+      flex-direction: column;
+    }
 
     .join-us__link {
       color: var(--purple-700);
