--- a/src/widgets/answer-info/ui/answer-info.css
+++ b/src/widgets/answer-info/ui/answer-info.css
@@ -5,6 +5,10 @@
   border-radius: 24px;
   box-shadow: var(--box-shadow);
 
+  @media (max-width: 1260px) {
+    display: none;
+  }
+
   .info__level {
     color: var(--black-700);
   }
