--- a/src/widgets/full-answer/ui/full-answer.css
+++ b/src/widgets/full-answer/ui/full-answer.css
@@ -1,14 +1,37 @@
 .full {
   margin-top: 20px;
   padding-bottom: 130px;
+
+  @media (max-width: 1260px) {
+    padding-bottom: 80px;
+  }
   .full__wrap {
     padding: 24px;
     background-color: #fff;
     border-radius: 24px;
     box-shadow: var(--box-shadow);
 
+    @media (max-width: 1260px) {
+      padding: 20px 16px;
+    }
+
+    @media (max-width: 730px) {
+      padding: 20px 16px;
+    }
+
     .full__answer {
       margin-top: 5px;
+
+      .language-plaintext,
+      .language-javascript {
+        white-space: pre-wrap;
+        word-break: break-word;
+      }
+
+      code {
+        white-space: pre-wrap;
+        word-break: break-word;
+      }
     }
   }
 }
