--- a/src/widgets/short-answer/ui/short-answer.css
+++ b/src/widgets/short-answer/ui/short-answer.css
@@ -6,6 +6,14 @@
     border-radius: 24px;
     box-shadow: var(--box-shadow);
 
+    @media (max-width: 1260px) {
+      padding: 20px 24px 20px 16px;
+    }
+
+    @media (max-width: 730px) {
+      padding: 16px;
+    }
+
     .short__answer {
       margin-top: 5px;
     }
